adds friday eve files'

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -230,3 +230,11 @@
 	title = {Quantifying reef fishes: bias in observational approaches},
 	booktitle = {Ecology of Fishes on Coral Reefs}
 }
+@misc{ECSA_2015,
+  author = {{European Citizen Science Association}},
+  title = {Ten Principles of Citizen Science},
+  howpublished = {\url{https://ecsa.citizen-science.net/sites/default/files/ecsa_ten_principles_of_citizen_science.pdf}},
+  year = 2015,
+  journal = {\url{https://ecsa.citizen-science.net/sites/default/files/ecsa_ten_principles_of_citizen_science.pdf}},
+  note = {Accessed: 2010-09-28}
+}
