--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -8,6 +8,7 @@ fontsize: 11pt
 output: 
   word_document:
     reference_docx: rendering-templates/word_template.docx
+  rtf_document:
 header-includes: \usepackage{color} \usepackage{lineno} \linenumbers \linespread{1.5}
   \usepackage{float} \usepackage[table]{xcolor} \usepackage{setspace} \usepackage{amsmath}
   \numberwithin{equation}{section} \usepackage{breqn} \usepackage{booktabs} \usepackage{parskip}
@@ -53,12 +54,11 @@ options(digits = 3)
 
 ## Introduction
 
-The targeted amplification and sequencing of DNA that living organisms shed into the physical environment they occupy (termed “environmental DNA metabarcoding”, or “eDNA sequencing”)  is revolutionizing microbiology, ecology, and conservation research. [@Taberlet_2012; @Deiner_2017].  Sequencing of environmental DNA extracted from field-collected soil, water, or sediment samples holds great promise to shed light on a range of questions, ranging from tracking the dynamics of bacterial communities or profiling the composition of ancient plant and animal communities [@Props_2016; @Pedersen_2014], to motoring populations of rare or endangered species [@Balasingham_2017]. As the cost of eDNA sequencing declines and sample collection techniques become more streamlined (e.g. @Thomas_2018), professional research scientists are increasingly using eDNA sequencing as a platform to partner with members of the community, such as natural resource managers, undergraduate students, and citizen scientists (collectively referred to in this manuscript as “community scientists”), in primary research. However, developing robust and impactful community science programs that engage community partners in all steps of the research process remains a challenge.
+The targeted amplification and sequencing of DNA that living organisms shed into the physical environment they occupy (termed “environmental DNA metabarcoding”, or “eDNA sequencing”)  is revolutionizing microbiology, ecology, and conservation research [@Taberlet_2012; @Deiner_2017].  Sequencing of environmental DNA extracted from field-collected soil, water, or sediment samples holds great promise to shed light on a range of questions, ranging from tracking the dynamics of bacterial communities or profiling the composition of ancient plant and animal communities [@Props_2016; @Pedersen_2014], to motoring populations of rare or endangered species [@Balasingham_2017]. As the cost of eDNA sequencing declines and sample collection techniques become more streamlined (e.g. @Thomas_2018), professional research scientists are increasingly using eDNA sequencing as a platform to partner with members of the community, such as natural resource managers, undergraduate students, and citizen scientists (collectively referred to in this manuscript as “community scientists”), in primary research. However, developing robust and impactful community science programs that engage community partners in all steps of the research process remains a challenge.
 
-eDNA sequencing-based projects work well for community science partnerships because non-experts can be quickly trained to collect samples in the field, and because eDNA sequencing is an exciting framework for research pertinent to disciplines such as medicine, agriculture, ecology, and geography [@Deiner_2017].  The community partners in these programs can have heterogeneous backgrounds, ranging from curious members of the public for whom collecting samples in the field is the first scientific research experience (e.g. University of California’s CALeDNA program, http://www.ucedna.com/), to professional natural resource managers who regularly collaborate with research scientists (e.g. Center for Ocean Solutions’ eDNA project, https://oceansolutions.stanford.edu/project-environmental-dna). In these partnerships (as in any other), community participants should be able to participate across multiple stages of the project, not only in sample collection (@Pandya_2012, https://ecsa.citizen-science.net/sites/default/files/ecsa_ten_principles_of_citizen_science.pdf). This can be a challenge for eDNA sequencing-based community science programs because although it is relatively easy to train community partners to collect eDNA samples, it is far more challenging to train them to interact with and visualize the results from these studies.
+eDNA sequencing-based projects work well for community science partnerships because non-experts can be quickly trained to collect samples in the field, and because eDNA sequencing is an exciting framework for research pertinent to disciplines such as medicine, agriculture, ecology, and geography [@Deiner_2017]. Community partners in such programs can have heterogeneous backgrounds, ranging from curious members of the public for whom collecting samples in the field is the first scientific research experience (e.g. University of California’s CALeDNA program, http://www.ucedna.com/), to professional natural resource managers who regularly collaborate with research scientists (e.g. Center for Ocean Solutions’ eDNA project, https://oceansolutions.stanford.edu/project-environmental-dna). In these partnerships (as in any other), community participants should be able to participate across multiple stages of the project, not only in sample collection [@Pandya_2012; @ECSA_2015]. This can be a challenge for eDNA sequencing-based community science programs because although it is relatively easy to train community partners to collect eDNA samples, it is far more challenging to train them to interact with and visualize the results from these studies: learning the bioinformatic tools necessary for visualizing and analyzing the large, multidimensional datasets generated in eDNA sequencing studies can be difficult for professional researchers (Carey & Papin 2018), let alone for the diverse community partners of community science programs. 
 
-Engaging community partners in data exploration and analysis phases of eDNA sequencing-based research projects is challenging because learning the bioinformatic tools necessary for visualizing and analyzing the large, multidimensional datasets generated from eDNA sequencing studies can be difficult for professional researchers [@Carey_2018], let alone for the diverse community partners of community science programs. To address this challenge, we created an R package “ranacapa”, at the core of which is a Shiny webapp with which users can visualize and perform simple community ecology analyses on results from eDNA sequencing studies.  ranacapa complements existing visualization platforms (e.g. Phinch, Phyloseq-Shiny, QIIME2 Viewer), because in addition to interactive visualizations, ranacapa includes brief explanations and links to additional educational resources to provide users with an overview of basic data analyses used in eDNA studies. ranacapa works with community matrices generated via QIIME () and stored as BIOM tables or with community matrices generated with the Anacapa sequence analysis pipeline (https://github.com/limey-bean/Anacapa), which is used extensively by the CALeDNA program.
-
+To address this challenge, we created an R package “ranacapa”, at the core of which is a Shiny webapp with which users can visualize and perform simple community ecology analyses on results from eDNA sequencing studies. ranacapa complements existing visualization platforms (e.g. Phinch, Phyloseq-Shiny, QIIME2 Viewer), because in addition to interactive visualizations, ranacapa includes brief explanations and links to additional educational resources to provide users with an overview of basic data analyses used in eDNA studies. ranacapa works with community matrices generated via QIIME () and stored as BIOM tables or with community matrices generated with the Anacapa sequence analysis pipeline (https://github.com/limey-bean/Anacapa), which is used extensively by the CALeDNA program.
 In the remainder of this manuscript, we describe ranacapa and demonstrate its use by two community science partnerships based at the University of California, Los Angeles (UCLA): first, a collaboration between eDNA researchers and resource managers at the National Park Service, and second, a partnership between community ecology researchers and an undergraduate microbiology course at UCLA. As we show in the Use Cases, empowering community partners to interact with the data and perform simple but insightful community ecology analyses can help make these collaborations more enriching and valuable to both parties.     
 
 ## Implementation
@@ -108,8 +108,31 @@ fig5
 - **More references**
 
 ## Operation
-ranacapa depends on Bioconductor v 3.7 and `R` v 3.5.1. The Shiny app has been tested on Chrome and Firefox on Windows, Mac-OSX, and Ubuntu. The package can be installed using the command `devtools::install_github("gauravsk/ranacapa")`, and the Shiny app is available at http://gauravsk.shinyapps.io/ranacapa.
-ranacapa focuses on visualizing and analyzing the taxonomy tables generated by two metabarcode sequence analysis pipelines: Anacapa (https://github.com/limey-bean/Anacapa) and QIIME (http://qiime2.org/). Anacapa generates tab-delimited taxonomy tables, with each row representing the taxonomic identification for each Amplicon Sequence Variant (ASV) and each column representing a sequenced sample. QIIME allows users to export ASV tables in the standard BIOM table format and taxonomy files as `.tsv` format files. Either the Anacapa `.txt` or the QIIME `.biom` files can be uploaded as the taxonomy files for `ranacapa`. `ranacapa` also expects sample metadata to be uploaded as a tab-delimited `.txt` file. The ranacapa function `validate_input_files()` verifies that both the taxonomy table and the metadata files match certain structural requirements, which are documented in the function help files. The current version of ranacapa accepts both categorical and continuous metadata columns, but in the latter case, continuous values are categorized into bins.
+ranacapa depends on Bioconductor v 3.7, which in turn relies on `R` v 3.5.0. The Shiny app has been tested on Chrome and Firefox on Windows, Mac-OSX, and Ubuntu. The package can be installed using the command `devtools::install_github("gauravsk/ranacapa")`, and the Shiny app is available at http://gauravsk.shinyapps.io/ranacapa.
+
+### Workflow
+ranacapa generates interactive visualizations based on two input files. The first required input is a site-by-species matrix, uploaded either as a `.biom` or as a `.txt` file. If the site-by-species matrix is uploaded as a `.biom` file, the file should contain taxonomy and abundance information; thus, `.qza` files generated by QIIME2 are not immediately suitable for ranacapa. If the site-by-species matrix is uploaded as a `.txt` file, the file should match the specifications of the output files from the Anacapa eDNA sequence analysis pipeline (). Specifically, each row in the `.txt` file must represent the taxonomic identification for one Amplicon Sequence Variant (ASV), and each column, save one, must represent the number of times that ASV appears in each sequenced sample. One column, named `sum.taxonomy` must contain the taxonomic identification, with taxonomic rank separated by a `;`. as follows: 
+
+```
+                                                                        sum.taxonomy Arch_point_1 Arch_point_2 Black_seabass_reef_1 Black_seabass_reef_2
+  Annelida;Clitellata;Haplotaxida;Hormogastridae;Hormogaster;Hormogaster castillana            0            0                    0                    0
+ Annelida;Clitellata;Haplotaxida;Lumbricidae;Allolobophora;Allolobophora chlorotica            0            0                    0                    0
+   Annelida;Clitellata;Haplotaxida;Megascolecidae;Amynthas;Amynthas sp. YN201102-05            0            0                    0                    0
+        Annelida;Clitellata;Haplotaxida;Megascolecidae;Amynthas;Amynthas thakhantho            0            0                    0                    0
+       Annelida;Polychaeta;Capitellida;Maldanidae;Axiothella;Axiothella rubrocincta            0            0                    0                    0
+```
+
+The second required input is a sample metadata file uploaded as a `.txt` file. The only requirements for this metadata file are that the entries in the first column of this file should match the column names in the sample names in the taxonomy table. A valid metadata file for the taxonomy table above would be as follows:
+
+```
+                Sample Sample_or_Control         Island  Protection  SST
+         Arch_point_1            Sample Santa Barabara unprotected   17
+         Arch_point_2            Sample Santa Barabara unprotected   17
+ Black_seabass_reef_1            Sample        Anacapa         MPA   16
+ Black_seabass_reef_2            Sample        Anacapa         MPA   16
+```
+
+s with the following specification:    `ranacapa` also expects sample metadata to be uploaded as a tab-delimited `.txt` file. The ranacapa function `validate_input_files()` verifies that both the taxonomy table and the metadata files match certain structural requirements, which are documented in the function help files. The current version of ranacapa accepts both categorical and continuous metadata columns, but in the latter case, continuous values are categorized into bins.
 
 ## Use Cases
 We designed ranacapa to be used by eDNA researchers to share the results from their research with community partners. Specifically, we expect that researchers with bioinformatic expertise will use best-practices to assign taxonomy to eDNA datasets using the pipeline of their choice and generate clean taxonomy and metadata files. Researchers will then use ranacapa to share results with their community partners, emphasizing the analyses or visualizations most appropriate to their use case. We document two such partnerships below that showcase how ranacapa can facilitate authentic communication between researchers and community scientists.
