--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -1,19 +1,10 @@
 ---
-title: 'ranacapa: An R package to explore environmental DNA data with exploratory
-  statistics and interactive visualizations'
-author: Gaurav S. Kandlikar (1,+), Zachary J. Gold (1), Madeline C. Cowen (1), Rachel
-  S. Meyer (1), Amanda C. Freise (2), Nathan J.B. Kraft (1), Jordan Moberg-Parker
-  (2), Joshua Sprague (3), David Kushner (3), and Emily E. Curd (1)
+title: 'ranacapa: An R package to explore environmental DNA data with exploratory statistics and interactive visualizations'
+author: Gaurav S. Kandlikar (1,+), Zachary J. Gold (1), Madeline C. Cowen (1), Rachel  S. Meyer (1), Amanda C. Freise (2), Nathan J.B. Kraft (1), Jordan Moberg-Parker (2), Joshua Sprague (3), David Kushner (3), and Emily E. Curd (1)
 fontsize: 11pt
 output: 
   word_document:
     reference_docx: rendering-templates/word_template.docx
-  rtf_document:
-header-includes: \usepackage{color} \usepackage{lineno} \linenumbers \linespread{1.5}
-  \usepackage{float} \usepackage[table]{xcolor} \usepackage{setspace} \usepackage{amsmath}
-  \numberwithin{equation}{section} \usepackage{breqn} \usepackage{booktabs} \usepackage{parskip}
-  \usepackage{tabularx} \setlength{\parindent}{5ex} \usepackage{sectsty} \paragraphfont{\normalfont\itshape}
-fontfamily: mathpazo
 urlcolor: blue
 always_allow_html: yes
 bibliography: bibliography.bib
@@ -58,11 +49,11 @@ The targeted amplification and sequencing of DNA that living organisms shed into
 
 eDNA sequencing-based projects work well for community science partnerships because non-experts can be quickly trained to collect samples in the field, and because eDNA sequencing is an exciting framework for research pertinent to disciplines such as medicine, agriculture, ecology, and geography [@Deiner_2017]. Community partners in such programs can have heterogeneous backgrounds, ranging from curious members of the public for whom collecting samples in the field is the first scientific research experience (e.g. University of California’s CALeDNA program, http://www.ucedna.com/), to professional natural resource managers who regularly collaborate with research scientists (e.g. Center for Ocean Solutions’ eDNA project, https://oceansolutions.stanford.edu/project-environmental-dna). In these partnerships (as in any other), community participants should be able to participate across multiple stages of the project, not only in sample collection [@Pandya_2012; @ECSA_2015]. This can be a challenge for eDNA sequencing-based community science programs because although it is relatively easy to train community partners to collect eDNA samples, it is far more challenging to train them to interact with and visualize the results from these studies: learning the bioinformatic tools necessary for visualizing and analyzing the large, multidimensional datasets generated in eDNA sequencing studies can be difficult for professional researchers (Carey & Papin 2018), let alone for the diverse community partners of community science programs. 
 
-To address this challenge, we created an R package “ranacapa”, at the core of which is a Shiny webapp with which users can visualize and perform simple community ecology analyses on results from eDNA sequencing studies. ranacapa complements existing visualization platforms (e.g. Phinch, Phyloseq-Shiny, QIIME2 Viewer), because in addition to interactive visualizations, ranacapa includes brief explanations and links to additional educational resources to provide users with an overview of basic data analyses used in eDNA studies. ranacapa works with community matrices generated via QIIME () and stored as BIOM tables or with community matrices generated with the Anacapa sequence analysis pipeline (https://github.com/limey-bean/Anacapa), which is used extensively by the CALeDNA program.
-In the remainder of this manuscript, we describe ranacapa and demonstrate its use by two community science partnerships based at the University of California, Los Angeles (UCLA): first, a collaboration between eDNA researchers and resource managers at the National Park Service, and second, a partnership between community ecology researchers and an undergraduate microbiology course at UCLA. As we show in the Use Cases, empowering community partners to interact with the data and perform simple but insightful community ecology analyses can help make these collaborations more enriching and valuable to both parties.     
+To address this challenge, we created an R package “ranacapa”, at the core of which is a Shiny webapp with which users can visualize and perform simple community ecology analyses on results from eDNA sequencing studies. `ranacapa` complements existing visualization platforms (e.g. Phinch, Phyloseq-Shiny, QIIME2 Viewer), because in addition to interactive visualizations, `ranacapa` includes brief explanations and links to additional educational resources to provide users with an overview of basic data analyses used in eDNA studies. `ranacapa` works with community matrices generated via QIIME () and stored as BIOM tables or with community matrices generated with the Anacapa sequence analysis pipeline (https://github.com/limey-bean/Anacapa), which is used extensively by the CALeDNA program.
+In the remainder of this manuscript, we describe `ranacapa` and demonstrate its use by two community science partnerships based at the University of California, Los Angeles (UCLA): first, a collaboration between eDNA researchers and resource managers at the National Park Service, and second, a partnership between community ecology researchers and an undergraduate microbiology course at UCLA. As we show in the Use Cases, empowering community partners to interact with the data and perform simple but insightful community ecology analyses can help make these collaborations more enriching and valuable to both parties.     
 
 ## Implementation
-ranacapa consists of a Shiny webapp (@Chang_2018) and two categories of helper functions (Table 1). The first set of functions works to connect the taxonomy tables, generated either by the Anacapa eDNA sequence analysis pipeline (https://github.com/limey-bean/Anacapa; Curd et al. in prep) or QIIME (Caporaso 2010), into phyloseq objects that can be used for downstream visualizations and analyses. The second set of functions, which includes two externally written functions openly available on GitHub, extends the visualization and statistical functionality of the `phyloseq` [@McMurdie_2013] and `vegan` (@Oksanen_2018) packages.
+At the core of `ranacapa` is a Shiny webapp (@Chang_2018), and the package also includes two categories of helper functions (Table 1). The first set of functions works to connect the taxonomy tables, generated either by the Anacapa eDNA sequence analysis pipeline (https://github.com/limey-bean/Anacapa; Curd et al. in prep) or QIIME (Caporaso 2010), into Phyloseq objects that can be used for downstream visualizations and analyses. The second set of functions, which includes two externally written functions openly available on GitHub, extends the visualization and statistical functionality of the `phyloseq` [@McMurdie_2013] and `vegan` (@Oksanen_2018) packages.
 
 The Shiny app (http://gauravsk.shinyapps.io/ranacapa or `rancapa::runRanacapaApp()`) allows users to interact with eDNA results through statistical summaries and interactive plots, displayed in the following tabs:
 
@@ -73,45 +64,45 @@ The Shiny app (http://gauravsk.shinyapps.io/ranacapa or `rancapa::runRanacapaApp
 fig1
 ```
 
-- **Taxonomy heatmap**: This tab shows the taxonomy-by-sample matrix as an interactive heatmap made using `heatmaply::heatmaply()`, where the color represent the number of times a given taxon was sequenced in a sample (Figure 2).   
+- **Taxonomy heatmap**: This tab shows the taxonomy-by-sample matrix as an interactive heatmap made using `heatmaply::heatmaply()`, where the color of each cell represents the number of times a given taxon was sequenced in a sample (Figure 2).   
 
 #### Figure 2
-```{r, fig.cap="Figure 2: Taxonomy heatmap as shown in the ranacapa Shiny app. Taxonomy is shown at the Order level in this figure; in the app, users can choose the taxonomic level to show in the heatmap."}
+```{r, fig.cap="Figure 2: Taxonomy heatmap as shown in the `ranacapa` Shiny app. Taxonomy is shown at the Order level in this figure; in the app, users can choose the taxonomic level to show in the heatmap."}
 fig2
 ```
 
 - **Taxonomy barplot**: This tab shows the taxonomy-by-sample matrix as an interactive barplot (Figure 3).  
 
 #### Figure 3
-```{r, fig.cap="Figure 3: Taxonomy barplot as shown in the ranacapa Shiny app. Taxonomy is shown at the Order level in this figure; in the app, users can choose the taxonomic level to show in the barplot"}
+```{r, fig.cap="Figure 3: Taxonomy barplot as shown in the `ranacapa` Shiny app. Taxonomy is shown at the Order level in this figure; in the app, users can choose the taxonomic level to show in the barplot"}
 fig3
 ```
 
-- **Alpha diversity plots**: This tab introduces the concept of Alpha diversity and that diversity can be calculated using a variety of metrics. Users can plot Alpha diversity as observed taxon richness or as Shannon Diversity per sample (or in samples grouped according to a variable in the metadata file, Figure 4).   
+- **Alpha diversity plots**: This tab introduces the concept of Alpha diversity as the local diversity measured in a single habitat or sample.  Users can plot Alpha diversity as observed taxon richness or as Shannon Diversity per sample, or can group samples according to a variable in the metadata file (Figure 4).   
 
 #### Figure 4
-```{r, fig.cap="Figure 4: Alpha diveristy boxplots as shown in the ranacapa Shiny app. Users can select the X-axis variable using a dropdown menu in the app."}
+```{r, fig.cap="Figure 4: Alpha diveristy boxplots as shown in the `ranacapa` Shiny app. Users can select the X-axis variable using a dropdown menu in the app."}
 fig4
 ```
 
 - **Alpha diversity statistics**: This tab allows users to choose a variable from the metadata, and generates an Alpha diversity ANOVA table according to the user-selected variable. The tab also shows the output from  a post-hoc Tukey test. 
 
-- **Beta diversity plots**: This tab introduces the concept of Beta diversity and shows a PCoA plot differentiating each sample. Points on the PCoA plot are colored according to a user-selected metadata variable (Figure 5). The tab also shows dissimilarity among sites according in a dendrogram generated with Ward’s cluster analysis (`stats::hclust(distance_object, method = "ward.d2")`, where `distance_object` is made using `phyloseq::distance()`. For both figures, users can toggle between using Jaccard and Bray-Curtis dissimilarity. 
+- **Beta diversity plots**: This tab introduces the concept of Beta diversity as the turnover in species composition across habitats (or samples). The tab includes an ordination plot generated by `phyloseq::plot_ordination()` based on an ordination made with `phyloseq::ordinate(., method = "PCoA")`. Points on the PCoA plot are colored according to a user-selected metadata variable (Figure 5). The tab also shows dissimilarity among sites according in a dendrogram generated with Ward’s cluster analysis (`stats::hclust(distance_object, method = "ward.d2")`, where `distance_object` is made using `phyloseq::distance()`. For both figures, users can toggle between using Jaccard and Bray-Curtis dissimilarity. 
 
 #### Figure 5
-```{r, fig.cap="Figure 5: PCoA ordination of the samples as shown in the ranacapa Shiny app. Users can select the grouping variable with a dropdown menu in the app."}
+```{r, fig.cap="Figure 5: PCoA ordination of the samples as shown in the `ranacapa` Shiny app. Users can select the grouping variable with a dropdown menu in the app."}
 fig5
 ```
 
-- **Beta diversity statistics**: This tab shows results from two statistical tests of species turnover across site: first, a multivariate ANOVA (implemented with `vegan::adonis())` and an associated pairwise comparison (implemented with `ranacapa::pairwise_adonis()`); second, heterogeneity of variances can be assessed using `vegan::betadisper()`.  
+- **Beta diversity statistics**: This tab shows results from two statistical tests of species turnover across site: first, a multivariate ANOVA implemented with `vegan::adonis())`, which shows users results from a statistical test of taxon turnover across sites, and second, a statistical test of heterogeneity of variances among samples implemented with `vegan::betadisper()`, which shows results from a statistical test that compares the degree of sample-to-sample variation within habitats (or within other user-selected groups).  
 
 - **More references**
 
 ## Operation
-ranacapa depends on Bioconductor v 3.7, which in turn relies on `R` v 3.5.0. The Shiny app has been tested on Chrome and Firefox on Windows, Mac-OSX, and Ubuntu. The package can be installed using the command `devtools::install_github("gauravsk/ranacapa")`, and the Shiny app is available at http://gauravsk.shinyapps.io/ranacapa.
+`ranacapa` depends on Bioconductor v 3.7, which in turn relies on `R` v 3.5.0. The Shiny app has been tested on Chrome and Firefox on Windows, Mac-OSX, and Ubuntu. The package can be installed using the command `devtools::install_github("gauravsk/ranacapa")`, and the Shiny app is available at http://gauravsk.shinyapps.io/ranacapa.
 
-### Workflow
-ranacapa generates interactive visualizations based on two input files. The first required input is a site-by-species matrix, uploaded either as a `.biom` or as a `.txt` file. If the site-by-species matrix is uploaded as a `.biom` file, the file should contain taxonomy and abundance information; thus, `.qza` files generated by QIIME2 are not immediately suitable for ranacapa. If the site-by-species matrix is uploaded as a `.txt` file, the file should match the specifications of the output files from the Anacapa eDNA sequence analysis pipeline (). Specifically, each row in the `.txt` file must represent the taxonomic identification for one Amplicon Sequence Variant (ASV), and each column, save one, must represent the number of times that ASV appears in each sequenced sample. One column, named `sum.taxonomy` must contain the taxonomic identification, with taxonomic rank separated by a `;`. as follows: 
+### Input file structure
+`ranacapa` generates interactive visualizations based on two input files. The first required input is a site-by-species matrix, uploaded either as a `.biom` or as a tab-separated `.txt` file. If the site-by-species matrix is uploaded as a `.biom` file, the file should contain taxonomy and abundance information; thus, `.qza` files generated by QIIME2 are not immediately suitable for ranacapa. If the site-by-species matrix is uploaded as a `.txt` file, the file should match the specifications of the output files from the Anacapa eDNA sequence analysis pipeline (). Specifically, each row in the `.txt` file must represent the taxonomic identification for one Amplicon Sequence Variant (ASV), and each column, save one, must represent the number of times that ASV appears in each sequenced sample. One column, named `sum.taxonomy` must contain the taxonomic identification, with taxonomic rank separated by a `;`. as follows: 
 
 ```
                                                                         sum.taxonomy Arch_point_1 Arch_point_2 Black_seabass_reef_1 Black_seabass_reef_2
@@ -122,7 +113,7 @@ ranacapa generates interactive visualizations based on two input files. The firs
        Annelida;Polychaeta;Capitellida;Maldanidae;Axiothella;Axiothella rubrocincta            0            0                    0                    0
 ```
 
-The second required input is a sample metadata file uploaded as a `.txt` file. The only requirements for this metadata file are that the entries in the first column of this file should match the column names in the sample names in the taxonomy table. A valid metadata file for the taxonomy table above would be as follows:
+The second required input is a tab-separated `.txt` file that contains sample metadata. The first column in this metadata file should match the column names in the sample names in the taxonomy table; the remaining columns of the metadata file contain sample information for each of the samples in the site-by-species matrix A valid metadata file for the taxonomy table above would be as follows:
 
 ```
                 Sample Sample_or_Control         Island  Protection  SST
@@ -132,35 +123,35 @@ The second required input is a sample metadata file uploaded as a `.txt` file. T
  Black_seabass_reef_2            Sample        Anacapa         MPA   16
 ```
 
-s with the following specification:    `ranacapa` also expects sample metadata to be uploaded as a tab-delimited `.txt` file. The ranacapa function `validate_input_files()` verifies that both the taxonomy table and the metadata files match certain structural requirements, which are documented in the function help files. The current version of ranacapa accepts both categorical and continuous metadata columns, but in the latter case, continuous values are categorized into bins.
+The `ranacapa` function `validate_input_files()` verifies that both the taxonomy table and the metadata files match certain structural requirements, which are documented in the function help files. The current version of `ranacapa` accepts both categorical and continuous metadata columns, but in the latter case, continuous values are categorized into bins.
 
 ## Use Cases
-We designed ranacapa to be used by eDNA researchers to share the results from their research with community partners. Specifically, we expect that researchers with bioinformatic expertise will use best-practices to assign taxonomy to eDNA datasets using the pipeline of their choice and generate clean taxonomy and metadata files. Researchers will then use ranacapa to share results with their community partners, emphasizing the analyses or visualizations most appropriate to their use case. We document two such partnerships below that showcase how ranacapa can facilitate authentic communication between researchers and community scientists.
+We designed `ranacapa` to be used by eDNA researchers to share the results from their research with community partners. Specifically, we expect that researchers with bioinformatic expertise will use best-practices to assign taxonomy to eDNA datasets using the pipeline of their choice and generate clean taxonomy and metadata files. Researchers will then use `ranacapa` to share results with their community partners, emphasizing the analyses or visualizations most appropriate to their use case. We document two such partnerships below that showcase how `ranacapa` can facilitate authentic communication between researchers and community scientists.
 
-### Use Case 1: How ranacapa facilitated a collaboration between eDNA researchers and managers at the National Park Service
+### Use Case 1: How `ranacapa` facilitated a collaboration between eDNA researchers and managers at the National Park Service
 
-eDNA research scientists can use ranacapa to share results, especially interactive taxonomy lists, with natural resource managers. For example ranacapa was used by researchers at UCLA who partner with resource managers at the Channel Islands National Park to assess the potential for eDNA as a biodiversity monitoring tool in the Southern California Channel Islands. The goal of this ongoing collaboration is to assess whether eDNA metabarcoding studies can provide insights to supplement ongoing management efforts at the park, which are currently done with expensive and time-intensive visual surveys (@Lessios_1996, @Murphy_2010, @Usseglio_2015). Implementing streamlined eDNA-based monitoring may allow a dramatic expansion in the scope and scale of marine ecosystem assessment in the California (@Edgar_2007, @Deiner_2017).
+eDNA research scientists can use `ranacapa` to share results, especially interactive taxonomy lists, with natural resource managers. For example `ranacapa` was used by researchers at UCLA who partner with resource managers at the Channel Islands National Park to assess the potential for eDNA as a biodiversity monitoring tool in the Southern California Channel Islands. The goal of this ongoing collaboration is to assess whether eDNA metabarcoding studies can provide insights to supplement ongoing management efforts at the park, which are currently done with expensive and time-intensive visual surveys (@Lessios_1996, @Murphy_2010, @Usseglio_2015). Implementing streamlined eDNA-based monitoring may allow a dramatic expansion in the scope and scale of marine ecosystem assessment in the California (@Edgar_2007, @Deiner_2017).
 
-To begin exploring whether eDNA-based studies can supplement visual underwater surveys, resource managers at the Channel Islands National Park Service collected and filtered thirty-1L water samples for eDNA analysis at permanent monitoring sites inside and adjacent to MPAs in the park. Research scientists at UCLA performed metabarcode sequencing of the mitochondrial 12S and CO1 gene regions from these samples targeting bony fishes, elasmobranches, and invertebrate taxa. The researchers processed sequences and assigned taxonomy using the Anacapa toolkit. When taxonomy tables were ready,  researchers used the ranacapa Shiny app to share results from this pilot study with National Park resource managers. 
+To begin exploring whether eDNA-based studies can supplement visual underwater surveys, resource managers at the Channel Islands National Park Service collected and filtered thirty-1L water samples for eDNA analysis at permanent monitoring sites inside and adjacent to MPAs in the park. Research scientists at UCLA performed metabarcode sequencing of the mitochondrial 12S and CO1 gene regions from these samples targeting bony fishes, elasmobranches, and invertebrate taxa. The researchers processed sequences and assigned taxonomy using the Anacapa toolkit. When taxonomy tables were ready,  researchers used the `ranacapa` Shiny app to share results from this pilot study with National Park resource managers. 
 
-The taxonomy heatmap (Figure 3) was the most valuable vizualation to this collaboration, because it allowed the resource managers to focus on a particular set of key taxa. The heatmap showed that this pilot study detected 36 of the 70 key metazoan taxa monitored by the managers at the species level, and the remaining 34 at the genus, family, or order level. This indicates that eDNA-based studies can likely supplement ongoing management efforts and provide new insights into the spatial and temporal distributions of these key species, especially rare and difficult to observe taxa such as endangered or invasive species. The resource managers were also interested in the PCoA plot, which was used to explore whether well-known major biogeographic patterns in the Channel Islands (e.g. turnover of fish communities across gradients in sea surface temperature, ) are detected using eDNA analyses. The value of ranacapa in this scenario was to highlight the strengths and areas for concern in using eDNA to monitor diversity in the Channel Islands. Due to the potential for eDNA to help improve detection of rare species (especially endangered species or newly introduced exotics), which are difficult to observe visually, this collaboration is continuing. The data from this study are packaged as the demo dataset for the ranacapa Shiny web-app and are available online at XXX.
+The taxonomy heatmap (Figure 3) was the most valuable vizualation to this collaboration, because it allowed the resource managers to focus on a particular set of key taxa. The heatmap showed that this pilot study detected 36 of the 70 key metazoan taxa monitored by the managers at the species level, and the remaining 34 at the genus, family, or order level. This indicates that eDNA-based studies can likely supplement ongoing management efforts and provide new insights into the spatial and temporal distributions of these key species, especially rare and difficult to observe taxa such as endangered or invasive species. The resource managers were also interested in the PCoA plot, which was used to explore whether well-known major biogeographic patterns in the Channel Islands (e.g. turnover of fish communities across gradients in sea surface temperature, ) are detected using eDNA analyses. The value of `ranacapa` in this scenario was to highlight the strengths and areas for concern in using eDNA to monitor diversity in the Channel Islands. Due to the potential for eDNA to help improve detection of rare species (especially endangered species or newly introduced exotics), which are difficult to observe visually, this collaboration is continuing. The data from this study are packaged as the demo dataset for the `ranacapa` Shiny web-app and are available online at XXX.
 
-### Use Case 2: How ranacapa helps undergraduate environmental microbiology students pursue sophisticated microbiome analyses
+### Use Case 2: How `ranacapa` helps undergraduate environmental microbiology students pursue sophisticated microbiome analyses
 
-Students can use ranacapa to interact with results from metabarcoding studies and to learn the basic structure of eDNA datasets. A research-based environmental microbiology course at UCLA [@Shapiro_2015] used eDNA metabarcoding approaches to study the impact of a recent local wildfire on the plant and soil microbial community. The goal of this twenty-week course was to provide students an authentic experience in basic microbiology and microbial community ecology research. The instructors helped students develop a research question, design a sampling regime to test their hypotheses, and conduct fieldwork to collect soil samples for eDNA analyses in burned and unburned natural areas. Over the first ten weeks of the course, the instructional team (which included eDNA research scientists) extracted total DNA and sequenced the ITS2 [@Gu_2013] and 16S SSU RNA [@Caporaso_2012] metabarcoding region to characterize the plant, bacterial, and archaeal communities in the student-collected soil samples. The researchers then processed the sequences and assigned taxonomy using the Anacapa toolkit. 
+Students can use `ranacapa` to interact with results from metabarcoding studies and to learn the basic structure of eDNA datasets. A research-based environmental microbiology course at UCLA [@Shapiro_2015] used eDNA metabarcoding approaches to study the impact of a recent local wildfire on the plant and soil microbial community. The goal of this twenty-week course was to provide students an authentic experience in basic microbiology and microbial community ecology research. The instructors helped students develop a research question, design a sampling regime to test their hypotheses, and conduct fieldwork to collect soil samples for eDNA analyses in burned and unburned natural areas. Over the first ten weeks of the course, the instructional team (which included eDNA research scientists) extracted total DNA and sequenced the ITS2 [@Gu_2013] and 16S SSU RNA [@Caporaso_2012] metabarcoding region to characterize the plant, bacterial, and archaeal communities in the student-collected soil samples. The researchers then processed the sequences and assigned taxonomy using the Anacapa toolkit. 
 
-Shortly after taxonomy tables were generated, the course instructors introduced students to eDNA data exploration and simple statistical analyses using ranacapa. A key strength of using ranacapa was that despite having no prior bioinformatics experience, students began exploring on the an online instance of Shiny app (http://gauravsk.shinyapps.io/ranacapa) within a single class period. Thus, using ranacapa allowed the instructors to focus their time with the students on biological questions rather than on troubleshooting bioinformatics problems, as had been the case in previous sessions of the course. The course instructors noted that this basic exploration in ranacapa, which was not part of the curriculum in previous iterations of the course, had several positive impacts on students and their research projects. First, ranacapa helped students explore the basic structure of the dataset and begin to understand the relationships between community profile and the various metadata they had collected in the field. Second, ranacapa opened the door to basic diversity analyses– for example, students could easily test their hypotheses regarding the taxonomic diversity of microbes in burned and unburned soils.  Third, by significantly reducing the time and difficulty in visualizing soil microbial diversity patterns, ranacapa helped students develop and pursue more sophisticated analyses during the remaineder of the course using tools such as STAMP. The taxonomy tables and metadata files used in this course are available online at XXXX.
+Shortly after taxonomy tables were generated, the course instructors introduced students to eDNA data exploration and simple statistical analyses using ranacapa. A key strength of using `ranacapa` was that despite having no prior bioinformatics experience, students began exploring on the an online instance of Shiny app (http://gauravsk.shinyapps.io/ranacapa) within a single class period. Thus, using `ranacapa` allowed the instructors to focus their time with the students on biological questions rather than on troubleshooting bioinformatics problems, as had been the case in previous sessions of the course. The course instructors noted that this basic exploration in ranacapa, which was not part of the curriculum in previous iterations of the course, had several positive impacts on students and their research projects. First, `ranacapa` helped students explore the basic structure of the dataset and begin to understand the relationships between community profile and the various metadata they had collected in the field. Second, `ranacapa` opened the door to basic diversity analyses– for example, students could easily test their hypotheses regarding the taxonomic diversity of microbes in burned and unburned soils.  Third, by significantly reducing the time and difficulty in visualizing soil microbial diversity patterns, `ranacapa` helped students develop and pursue more sophisticated analyses during the remaineder of the course using tools such as STAMP. The taxonomy tables and metadata files used in this course are available online at XXXX.
 
 ## Summary and Future Directions
 
 Metabarcode sequencing of environmental DNA is becoming a key tool in a wide variety of ecological studies, and results from these studies are of interest to a broad audience.  Our `R` package and Shiny web-app `ranacapa` helps users conduct exploratory analyses and visualizations on eDNA datasets, and is a step toward making data and analyses from eDNA sequencing-based studies more accessible and understandable for a wide range of community research partners. 
 
-We propose three avenues for future work in ranacapa. First, we plan to use ranacapa as the primary tool to present eDNA results from hundreds of samples sequenced by the CALeDNA community science program. The positive experience with reserve managers suggests open forums to discuss ranacapa output will be fruitful to strengthen the feedback loop between community partners and researchers. Second, ranacapa will be a key tool in the upcoming undergraduate curriculum module “Pipeline for Undergraduate Microbiome Analysis”, which is being built as a complete suite of analysis and data visualization tools which will be made openly available to undergraduate researchers. Finally, in the long-term, we believe that there is great promise in connecting ranacapa to packages that connect with APIs of online biodiversity databases (e.g. Taxize, rinat). This will help users explore a much wider range of biodiversity questions, for example, by programmatically asking whether their samples include invasive species that are absent from other nearby sites. Such apps that allow non-technical audiences to easily interact with results from eDNA sequencing studies have great potential to engage community partners with a wide range of backgrounds and interests in primary research.
+We propose three avenues for future work in ranacapa. First, we plan to use `ranacapa` as the primary tool to present eDNA results from hundreds of samples sequenced by the CALeDNA community science program. The positive experience with reserve managers suggests open forums to discuss `ranacapa` output will be fruitful to strengthen the feedback loop between community partners and researchers. Second, `ranacapa` will be a key tool in the upcoming undergraduate curriculum module “Pipeline for Undergraduate Microbiome Analysis”, which is being built as a complete suite of analysis and data visualization tools which will be made openly available to undergraduate researchers. Finally, in the long-term, we believe that there is great promise in connecting `ranacapa` to packages that connect with APIs of online biodiversity databases (e.g. Taxize, rinat). This will help users explore a much wider range of biodiversity questions, for example, by programmatically asking whether their samples include invasive species that are absent from other nearby sites. Such apps that allow non-technical audiences to easily interact with results from eDNA sequencing studies have great potential to engage community partners with a wide range of backgrounds and interests in primary research.
 
 ## Software availability
 
 - A Shiny web-app, including a dataset generated for demonstrations, is available at https://gauravsk.shinyapps.io/ranacapa  
-- ranacapa is available for installation at https://github.com/gauravsk/ranacapa  
+- `ranacapa` is available for installation at https://github.com/gauravsk/ranacapa  
 - Link to source code as at time of publication (F1000Research TO GENERATE)  
 - Link to archived source code as at time of publication (F1000Research TO GENERATE)  
 - Software license (GPL-3)  
@@ -169,7 +160,7 @@ We propose three avenues for future work in ranacapa. First, we plan to use rana
 - License: CC-BY 4.0
 
 ## Author contributions
-GSK led the development of ranacapa, with help from MCC. ZJG and EEC provided feedback regarding which analyses and visualization options to include. ZJG performed the MPA eDNA study in collaboration with JS and DK. NK, GSK, EC, and RM collaborated with AF and JMP, who used ranacapa in their microbiology undergraduate course. GSK wrote the first draft of this manuscript; all authors contributed to revisions.
+GSK led the development of ranacapa, with help from MCC. ZJG and EEC provided feedback regarding which analyses and visualization options to include. ZJG performed the MPA eDNA study in collaboration with JS and DK. NK, GSK, EC, and RM collaborated with AF and JMP, who used `ranacapa` in their microbiology undergraduate course. GSK wrote the first draft of this manuscript; all authors contributed to revisions.
 
 ## Competing interests
 No competing interests were disclosed
@@ -178,7 +169,7 @@ No competing interests were disclosed
 GSK and ZJG were supported by the US-NSF Graduate Research Fellowship (DEG No. 1650604) during the development of this package. EEC is supported by the CALeDNA program, with funds from University of California President’s Research Catalyst Award (CA-16-376437).
 
 ## Acknowledgments
-We thank Sabrina Shirazi, Rachel Turba, Chris Dao, and Keith Mitchell for providing feedback on developmental versions of this package. Ranacapa builds on numerous functions that have been made openly available online with a GPL-3 License, namely the “phyloseq-extended” toolkit written by Mahendra Mariadassau (https://github.com/mahendra-mariadassou/phyloseq-extended) and “pairwise.adonis” written by Pedro Martinez Arbizu (https://github.com/pmartinezarbizu/pairwiseAdonis). 
+We thank Sabrina Shirazi, Rachel Turba, Chris Dao, and Keith Mitchell for providing feedback on developmental versions of this package. `ranacapa` builds on numerous functions that have been made openly available online with a GPL-3 License, namely the “phyloseq-extended” toolkit written by Mahendra Mariadassau (https://github.com/mahendra-mariadassou/phyloseq-extended) and “pairwise.adonis” written by Pedro Martinez Arbizu (https://github.com/pmartinezarbizu/pairwiseAdonis). 
 
 \clearpage
 
