--- a/bibliography.bib
+++ b/bibliography.bib
@@ -11,6 +11,26 @@
 	title = {Environmental {DNA} detection of rare and invasive fish species in two Great Lakes tributaries},
 	journal = {Molecular Ecology}
 }
+@Manual{Barve_2017,
+  title = {rinat: Access iNaturalist Data Through APIs},
+  author = {Vijay Barve and Edmund Hart},
+  year = {2017},
+  note = {R package version 0.1.5},
+  url = {https://CRAN.R-project.org/package=rinat},
+}
+@article{Caporaso_2010,
+	doi = {10.1038/nmeth.f.303},
+	url = {https://doi.org/10.1038%2Fnmeth.f.303},
+	year = 2010,
+	month = {apr},
+	publisher = {Springer Nature},
+	volume = {7},
+	number = {5},
+	pages = {335--336},
+	author = {J Gregory Caporaso and Justin Kuczynski and Jesse Stombaugh and Kyle Bittinger and Frederic D Bushman and Elizabeth K Costello and Noah Fierer and Antonio Gonzalez Pe{\~{n}}a and Julia K Goodrich and Jeffrey I Gordon and Gavin A Huttley and Scott T Kelley and Dan Knights and Jeremy E Koenig and Ruth E Ley and Catherine A Lozupone and Daniel McDonald and Brian D Muegge and Meg Pirrung and Jens Reeder and Joel R Sevinsky and Peter J Turnbaugh and William A Walters and Jeremy Widmann and Tanya Yatsunenko and Jesse Zaneveld and Rob Knight},
+	title = {{QIIME} allows analysis of high-throughput community sequencing data},
+	journal = {Nature Methods}
+}
 @article{Caporaso_2012,
 	doi = {10.1038/ismej.2012.8},
 	url = {https://doi.org/10.1038%2Fismej.2012.8},
@@ -37,6 +57,16 @@
 	editor = {Scott Markel},
 	title = {Ten simple rules for biologists learning to program},
 	journal = {{PLOS} Computational Biology}
+}
+@article{Chamberlain_2013,
+	doi = {10.12688/f1000research.2-191.v2},
+	url = {https://doi.org/10.12688%2Ff1000research.2-191.v2},
+	year = 2013,
+	month = {oct},
+	publisher = {F1000 Research, Ltd.},
+	author = {Scott A. Chamberlain and Eduard Szöcs},
+	title = {taxize: taxonomic search and retrieval in R},
+	journal = {F1000Research}
 }
 @Manual{Chang_2018,
   title = {shiny: Web Application Framework for R},
