adds comments and some fixes

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -160,6 +160,20 @@
 	title = {Waste Not, Want Not: Why Rarefying Microbiome Data Is Inadmissible},
 	journal = {{PLoS} Computational Biology}
 }
+@article{Miya_2015,
+	doi = {10.1098/rsos.150088},
+	url = {https://doi.org/10.1098%2Frsos.150088},
+	year = 2015,
+	month = {jul},
+	publisher = {The Royal Society},
+	volume = {2},
+	number = {7},
+	pages = {150088},
+	author = {M. Miya and Y. Sato and T. Fukunaga and T. Sado and J. Y. Poulsen and K. Sato and T. Minamoto and S. Yamamoto and H. Yamanaka and H. Araki and M. Kondoh and W. Iwasaki},
+	title = {{MiFish}, a set of universal {PCR} primers for metabarcoding environmental {DNA} from fishes: detection of more than 230 subtropical marine species},
+	journal = {Royal Society Open Science}
+}
+
 @article{Murphy_2010,
 	doi = {10.1071/mf09068},
 	url = {https://doi.org/10.1071%2Fmf09068},
